apps-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trigo-apps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "appA.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app_a-app_a-svc
            port:
              number: 80
  - host: "appB.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app_b-app_b-svc
            port:
              number: 80
